Store housing data for London boroughs

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Pycharm folders
+/.idea/*
+
+# Keys
+/resources/api_keys.py
+/resources/file_paths.py
